--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,9 +12,15 @@ jobs:
       - name: Install Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y helm shellcheck
+          echo "Installing ShellCheck"
+          sudo apt-get install -y shellcheck
+          echo "Installing Docker"
           curl -fsSL https://get.docker.com -o get-docker.sh
           sudo sh get-docker.sh
+          echo "Installing Helm"
+          curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
+          chmod 700 get_helm.sh
+          ./get_helm.sh
 
       - name: Run ShellCheck (Linting)
         run: shellcheck pull_helm_images.sh
