--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
         run: shellcheck pull_helm_images.sh
 
       - name: Test Script (Dry Run)
-        run: ./pull_helm_images.sh -l -s stable/nginx || echo "Script failed"
+        run: ./pull_helm_images.sh -l -s jenkins/jenkins || echo "Script failed" && exit 1
